third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_value.exp

Diagnostics:
error: constraint `integer` incompatible with `||_ has ..`
  ┌─ tests/more-v1/parser/invalid_call_lhs_value.move:3:9
  │
3 │         5();
  │         ^^^

error: constraint `integer` incompatible with `|(integer, integer)|_ has ..`
  ┌─ tests/more-v1/parser/invalid_call_lhs_value.move:4:9
  │
4 │         5(0, 1);
  │         ^^^^^^^
